--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Amit Merchant
 description: An elegant Jekyll theme
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars0.githubusercontent.com/u/3647841?v=3&s=460
+avatar: /images/reverie.png
 
 #
 # Flags below are optional
