--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer-links:
   email: amit.d.merchant@gmail.com
   facebook:
   flickr:
-  github: amitmerchant1990
+  github: amitmerchant1990/reverie
   instagram:
   linkedin: 
   pinterest:
