Chore: Theme Cleanup

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Amit Merchant
 description: An elegant Jekyll theme
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /reverie/images/reverie.png
+avatar: /images/reverie.png
 
 #
 # Flags below are optional
