--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 # These are supported funding model platforms
 
 github: amitmerchant1990
+custom: paypal.me/AmitMerchant
 patreon: amitmerchant
-ko_fi: amitmerchant
