Added Gemfile and first post

--- a/_config.yml
+++ b/_config.yml
@@ -36,14 +36,6 @@ footer-links:
   playconsole:
   bandcamp: flowkap
 
-
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus:
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-43339302-11
-
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
 url:
@@ -53,7 +45,7 @@ enforce_ssl:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl:
+baseurl: ""
 
 #
 # !! You don't need to change any of the configuration flags below !!
