--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: flowkap/flowkap.github.io
+  github: flowkap
   instagram:
   linkedin:
   pinterest:
@@ -36,7 +36,7 @@ footer-links:
   playconsole:
   bandcamp: flowkap
 
-# Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
+# Your website URL (e.g. http://flowkap.github.io)
 # Used for Sitemap.xml and your RSS feed
 url:
 enforce_ssl:
@@ -50,7 +50,6 @@ baseurl: ""
 #
 # !! You don't need to change any of the configuration flags below !!
 #
-
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
