--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ footer-links:
   flickr:
   github: flowkap
   instagram:
-  linkedin:
+  linkedin: floriankappes
   pinterest:
   rss:
   twitter: flowkap
@@ -38,8 +38,8 @@ footer-links:
 
 # Your website URL (e.g. http://flowkap.github.io)
 # Used for Sitemap.xml and your RSS feed
-url:
-enforce_ssl:
+url: https://flowkap.dev
+enforce_ssl: true
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
