--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   instagram:
   linkedin: floriankappes
   pinterest:
-  rss:
+  rss: rss
   twitter: flowkap
   stackoverflow: users/2538750/flowkap
   youtube: # channel/<your_long_string> or user/<user-name>
